src/app/home/home.component.scss
@import "../../variables.scss";

.container {
  color: $font-gray;
}

.background-photo {
  width: 100%;
  margin-bottom: -20vw;
  position: relative;
  z-index: -1;
}

.body-background {
  background-color: $home-background;
  padding: 12vw 9vw 64px 9vw;
}

.grid-container {
  position: relative;
  width: 100%;
  padding-top: 50%;
}

.grid {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-columns: 1fr 2fr 2fr 1fr;
  grid-template-rows: 1fr 1fr 1fr;
  gap: 1.5vw;
  place-items: stretch;
  justify-content: stretch;
}

.link {
  background-color: hsl(218, 100%, 12%);
  font-size: 2vw;
  font-weight: bolder;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
  padding: 1vw 2vw;
}

.link.private-shoots {
  grid-row: 1 / 3;
  grid-column: 3 / 5;
}

.link.editorial-content {
  grid-column: 1 / 3;
}

.link.workshops {
  grid-column: 1 / 3;
}

